added simple net structure

--- a/client/ClientApp/ClientApp/ClientApp.csproj
+++ b/client/ClientApp/ClientApp/ClientApp.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Entity.cs" />
+    <Compile Include="Models\RequestActions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
